Fixed data column spacing issue

--- a/src/views/CampusSafety/views/LostAndFoundAdmin/views/MissingItemList/MissingItemList.module.scss
+++ b/src/views/CampusSafety/views/LostAndFoundAdmin/views/MissingItemList/MissingItemList.module.scss
@@ -82,6 +82,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding-right: 0.5rem;
 }
 
 .stolenBadge {
